--- a/Readme
+++ b/Readme
@@ -1,1 +1,8 @@
-The repo is to keep track of the data handling.
+The repo is to keep track of the mapping van data handling.
+Each of the drives have a storage space of 5 TB.
+Master Copy S/N: NACM914Q "Data Collected from 05/11/2023-06/28/2024" Storage_Size = 839.88 GB
+SSD_1 S/N: NT36J5H2 "Clone-copied on 07/02/2024" Assigned to -
+SSD_2 S/N: NT36J5F6 "Clone-copied on 07/03/2024" Assigned to -
+SSD_3 S/N: NT36J5GY "Clone-copied on 07/03/2024" Assigned to -
+SSD_4 S/N: NT36J5LC "Clone-copied on 07/05/2024" Assigned to -
+SSD_5 S/N: NT36J5M4 "Clone-copied on 07/05/2024" Assigned to -
